--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -1,4 +1,3 @@
-
 header {
     background-color: gray;
 }
@@ -15,12 +14,21 @@ header nav {
 header .menu-item {
     padding: 0.5rem 1rem;
     text-decoration: inherit;
+    color: darkorange;
 }
+
 header .menu-item:hover {
     color: darkred;
     background-color: lightgray;
     border-radius: 8px;
 }
+
+header .is-active {
+    color: darkred;
+    background-color: lightgray;
+    border-radius: 8px;
+}
+
 .cont-part1, .cont-part2 {
     margin: 0 1rem;
     display: flex;
